--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Hello world
-	run: echo "Hello world"
+      - name: hello world
+        run: echo "Hello world"
         shell: bash
   goodbye:
     runs-on: ubuntu-latest
